[fix] 탭 없는 화면 높이를 iOS 보이는 뷰포트 기준으로 보정 (--app-visible-height 도입)

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -168,6 +168,7 @@
 @layer base {
   :root {
     --app-height: 100dvh;
+    --app-visible-height: 100dvh;
     --app-offset-top: 0px;
   }
 
